--- a/ColorPickerJJO.xaml
+++ b/ColorPickerJJO.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Standard_UC_JJO.ColorPickerJJO"
+﻿<UserControl x:Class="BW_to_WandAlpha.ColorPickerJJO"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
