--- a/PickFolder_JJO.xaml
+++ b/PickFolder_JJO.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Standard_UC_JJO.PickFolder_JJO"
+﻿<UserControl x:Class="BW_to_WandAlpha.PickFolder_JJO"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Standard_UC_JJO"
+             xmlns:local="clr-namespace:BW_to_WandAlpha"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="200"
              x:Name="pickFolder">
